# Ryagent

./: .gitignore  CLAUDE.md  README.md  config.example.toml  config.toml  main.py  plan.md  project_plan.md  pyproject.toml  quick_notes.md
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: create-tab-dialog.tsx  delete-confirmation-dialog.tsx  sidebar.tsx  theme-toggle.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/lib/: api.ts
ryagent/: __init__.py  main.py  models.py
ryagent/agents/: base_agent.py
ryagent/app/: __init__.py  integrated_app.py  main_app.py  server.py  styles.css
ryagent/cfg/: config.py
ryagent/config/: settings.py
ryagent/core/: __init__.py  models.py
ryagent/llm/: client.py
ryagent/runtime/: events.py
ryagent/tools/: base.py  core_tools.py
ryagent/utils/: auth.py
tests/: __init__.py  test_api.py
tests/integration/: test_full_flow.py
